Added animation and designing in css

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@
   padding: 27px;
   padding-bottom: 21px;
   border-radius: 4px;
-  background-color: #fdfdfd;
+  background-color: #fff;
   margin-block: 82px;
-  box-shadow: 2px 5px 5px rgb(0 0 0 / 2%);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 footer {
   text-align: center;
