--- a/src/search.css
+++ b/src/search.css
@@ -31,10 +31,12 @@ ul,
 li {
   text-decoration: none;
   list-style: none;
+  font-family: "Nunito", sans-serif;
+  font-size: 20px;
 }
 h2 {
-  font-family: "Open Sans", sans-serif;
-  font-size: 40px;
+  font-family: "Nunito", sans-serif;
+  font-size: 35px;
 }
 .search-icon {
   font-size: 24px;
@@ -43,10 +45,15 @@ h2 {
 }
 
 .city {
-  font-size: 70px;
-  font-weight: 500;
-  font-family: "Open Sans", sans-serif;
-  color: #656669;
+  font-size: 75px;
+  font-weight: 200;
+  font-family: "Nunito", sans-serif;
+  color: #575757;
+}
+.Date {
+  font-size: "Nunito", sans-serif;
+  font-size: 30px;
+  color: grey;
 }
 .fahrenheit {
   font-size: 25px;
@@ -65,8 +72,11 @@ h2 {
 }
 
 .icon {
-  font-size: 50px;
-  line-height: 1px;
+  font-size: 75px;
+  line-height: 10px;
+  position: relative;
+  top: -18px;
+  color: rgb(85, 85, 85);
 }
 .temperature {
   font-size: 120px;
@@ -92,6 +102,7 @@ h2 {
 .Weather {
   text-align: center;
 }
+
 /*   Animation  */
 .circle {
   background-image: linear-gradient(
@@ -103,8 +114,8 @@ h2 {
     rgb(234, 238, 240) 81.9%,
     rgb(250, 245, 171) 99.2%
   );
-  width: 303px;
-  height: 309px;
+  width: 302px;
+  height: 307px;
   border-style: solid;
   border-color: transparent;
   border-radius: 50%;
