--- a/src/search.css
+++ b/src/search.css
@@ -1,11 +1,12 @@
 button {
   background-color: #b99be6;
-  padding: 6px 15px 8px 15px;
-  border-radius: 3px;
+  padding: 7px 15px 11px 15px;
+  border-radius: 40px;
   position: relative;
   left: -18px;
   border: none;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 button:hover {
   background-image: linear-gradient(
@@ -45,10 +46,11 @@ h2 {
 }
 
 .city {
-  font-size: 75px;
-  font-weight: 200;
+  font-size: 70px;
+  font-weight: 500;
   font-family: "Nunito", sans-serif;
-  color: #575757;
+  color: #4d4949;
+  box-shadow: rgba(124, 124, 124, 0.1) 0px 25px 20px -20px;
 }
 .Date {
   font-size: "Nunito", sans-serif;
@@ -64,6 +66,7 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
 }
 .form-control {
+  border-radius: 41px;
   padding: 12px;
   font-family: "Nunito", sans-serif;
   border-color: #b99be6;
