--- a/src/search.css
+++ b/src/search.css
@@ -74,12 +74,12 @@ h2 {
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
-.icon {
+.icon canvas {
   font-size: 75px;
   line-height: 10px;
   position: relative;
   top: -18px;
-  color: rgb(85, 85, 85);
+  color: #b99be6;
 }
 .temperature {
   font-size: 120px;
