--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,13 @@
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 footer {
-  text-align: center;
   margin-top: -60px;
-  font-size: small;
+  text-align: center;
+  font-size: 18px;
 }
 
 a {
   text-decoration: none;
   color: #5664ff;
-  font-size: small;
+  font-size: 10px;
 }
