--- a/src/search.css
+++ b/src/search.css
@@ -31,10 +31,12 @@ li {
   list-style: none;
   font-family: "Nunito", sans-serif;
   font-size: 20px;
+  color: #858585;
 }
 h2 {
+  color: #858585;
   font-family: "Nunito", sans-serif;
-  font-size: 35px;
+  font-size: 40px;
   line-height: 20px;
 }
 .search-icon {
